Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
── Failure (test-dplyr-aggregate.R:166:3): Filter and aggregate ──────────────── 860 `via_batch <- rlang::eval_tidy(expr, rlang::new_data_mask(rlang::env(input = record_batch(tbl))))` generated warnings: 861 * Error : Key error: ExecNode factory named source not present in registry.; pulling data into R 862 Backtrace: 863 █ 864 1. └─arrow:::expect_dplyr_equal(...) test-dplyr-aggregate.R:166:2 865 2. └─testthat::expect_warning(...) helper-expectation.R:101:4 866 ── Failure (test-dplyr-aggregate.R:166:3): Filter and aggregate ──────────────── 867 `via_table <- rlang::eval_tidy(expr, rlang::new_data_mask(rlang::env(input = Table$create(tbl))))` generated warnings: 868 * Error : Key error: ExecNode factory named source not present in registry.; pulling data into R 869 Backtrace: 870 █ 871 1. └─arrow:::expect_dplyr_equal(...) test-dplyr-aggregate.R:166:2 872 2. └─testthat::expect_warning(...) helper-expectation.R:114:4 873 ── Failure (test-dplyr-aggregate.R:176:3): Filter and aggregate ──────────────── 874 `via_batch <- rlang::eval_tidy(expr, rlang::new_data_mask(rlang::env(input = record_batch(tbl))))` generated warnings: 875 * Error : Key error: ExecNode factory named source not present in registry.; pulling data into R 876 Backtrace: 877 █ 878 1. └─arrow:::expect_dplyr_equal(...) test-dplyr-aggregate.R:176:2 879 2. └─testthat::expect_warning(...) helper-expectation.R:101:4 880 ── Failure (test-dplyr-aggregate.R:176:3): Filter and aggregate ──────────────── 881 `via_table <- rlang::eval_tidy(expr, rlang::new_data_mask(rlang::env(input = Table$create(tbl))))` generated warnings: 882 * Error : Key error: ExecNode factory named source not present in registry.; pulling data into R 883 Backtrace: 884 █ 885 1. └─arrow:::expect_dplyr_equal(...) test-dplyr-aggregate.R:176:2 886 2. └─testthat::expect_warning(...) helper-expectation.R:114:4 887 888 [ FAIL 23 | WARN 0 | SKIP 32 | PASS 4954 ]
Link to an example: https://github.com/ursacomputing/crossbow/runs/3287857304#step:7:875
https://github.com/apache/arrow/commit/2aa94c4712ce406d7c87d361b5c655a6ea585701 might be the culprit, it was merged the day before the failures
Attachments
Issue Links
- is duplicated by
-
ARROW-13746 [CI][C++] ubuntu cpp static nightly job fails
-
- Closed
-
- relates to
-
ARROW-13746 [CI][C++] ubuntu cpp static nightly job fails
-
- Closed
-
- links to