ARROW-13597: [C++][Compute] Remove AddOnLoad helper